Add a cl_launcher deepsmith harness.

--- a/deeplearning/deepsmith/harnesses/BUILD
+++ b/deeplearning/deepsmith/harnesses/BUILD
@@ -79,6 +79,46 @@ py3_image(
     ],
 )
 
+py_binary(
+    name = "cl_launcher",
+    srcs = ["cl_launcher.py"],
+    data = [
+        "@CLSmith//:cl_launcher",
+        "@CLSmith//:cl_safe_math_macros",
+        "@CLSmith//:runtime_headers",
+        "@CLSmith//:safe_math_macros",
+    ],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
+    visibility = ["//visibility:public"],
+    deps = [
+        ":harness",
+        "//deeplearning/deepsmith:services",
+        "//deeplearning/deepsmith/proto:harness_py_pb2",
+        "//gpu/cldrive:env",
+        "//lib/labm8:bazelutil",
+        "//lib/labm8:labdate",
+        requirement("absl-py"),
+        requirement("grpcio"),
+    ],
+)
+
+py_test(
+    name = "cl_launcher_test",
+    srcs = ["cl_launcher_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":cl_launcher",
+        "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
+        "//deeplearning/deepsmith/proto:harness_py_pb2",
+        "//deeplearning/deepsmith/proto:service_py_pb2",
+        "//gpu/cldrive:env",
+        requirement("absl-py"),
+        requirement("pytest"),
+    ],
+)
+
 py_library(
     name = "harness",
     srcs = ["harness.py"],
