Fix syntax of Dockerfile.

--- a/experimental/deeplearning/deepsmith/opencl_fuzz/Dockerfile
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/Dockerfile
@@ -12,4 +12,4 @@ ADD model /data/model
 # Add and unpack the CLgen build archive.
 ADD opencl_fuzz_image-layer.tar /
 
-ENTRYPOINT ["python", "/app/experimental/deeplearning/deepsmith/opencl_fuzz/opencl_fuzz_image.binary", "--generator=clgen" "--generator_config=/data/clgen.pbtxt", "--interesting_results_dir=/out"]
+ENTRYPOINT ["python", "/app/experimental/deeplearning/deepsmith/opencl_fuzz/opencl_fuzz_image.binary", "--generator=clgen", "--generator_config=/data/clgen.pbtxt", "--interesting_results_dir=/out"]
