--- a/deeplearning/deepsmith/harnesses/BUILD
+++ b/deeplearning/deepsmith/harnesses/BUILD
@@ -16,6 +16,7 @@ py_binary(
             "@llvm_linux//:clang",
             "@llvm_linux//:libcxx_headers",
             "@llvm_linux//:libcxx_libs",
+            "@libopencl//:libOpenCL.so",
         ],
     }),
     default_python_version = "PY3",
