Train a model to predict reachability.

--- a/experimental/compilers/reachability/BUILD
+++ b/experimental/compilers/reachability/BUILD
@@ -3,16 +3,6 @@
 load("@requirements//:requirements.bzl", "requirement")
 
 py_binary(
-    name = "make_training_data",
-    srcs = ["make_training_data.py"],
-    deps = [
-        ":reachability",
-        "//experimental/compilers/reachability/proto:reachability_py_pb2",
-        requirement("absl-py"),
-    ],
-)
-
-py_binary(
     name = "reachability",
     srcs = ["reachability.py"],
     deps = [
@@ -22,5 +12,21 @@ py_binary(
         "//lib/labm8:graph",
         requirement("absl-py"),
         requirement("numpy"),
+    ],
+)
+
+py_binary(
+    name = "train_model",
+    srcs = ["train_model.py"],
+    deps = [
+        ":reachability",
+        "//deeplearning/clgen/corpuses:atomizers",
+        "//deeplearning/clgen:telemetry",
+        "//lib/labm8:pbutil",
+        "//experimental/compilers/reachability/proto:reachability_py_pb2",
+        requirement("absl-py"),
+        requirement("keras"),
+        requirement("numpy"),
+        requirement("humanize"),
     ],
 )
