Add missing dependency.

--- a/learn/python/BUILD
+++ b/learn/python/BUILD
@@ -10,5 +10,6 @@ py_test(
     deps = [
         requirement("absl-py"),
         requirement("ascii_art"),
+        requirement("pytest"),
     ],
 )
